2009-08-?? dispatcher 0.9.98

* make dispatcher silent on terminal, only print unrecoverable startup errors
* fix segfault on error reply from gearman
* handle locks and deadlocks during query execution (sleep and retry on
deadlock in child and retry lock in child)
* improve handling of sql errors in main dispatcher loop

2009-07-29 dispatcher 0.9.97.2

* remove unused code
* move config map into header enum
* fix duplicate messages when fork finish

2009-07-23 dispatcher 0.9.97.1

* bugfixes for signal handling

2009-07-22 dispatcher 0.9.97

* add more detailed timeout report
* add handling of task elapsed time if value returned from worker
* modify failed tasks processing, use failed state and reinsert new
* add forced termination after few SIGINTs (CTRL-C) or default kill (SIGTERM)

2009-07-20 dispatcher 0.9.96

* reopen logs on reload, this prevents using freed identifier by syslog
* clean sense logging, use timestamps to specify delays in log printing
* count number of dispatched jobs and log that
* add version information command line option
* add control of maximum number of children as command line option
* add basic control over the environment of the task

2009-07-09 dispatcher 0.9.95

* store complete worker result in the database instead just of status
* add mote fine graded control over logging information

2009-07-07 dispatcher 0.9.94

* small changes: config structures are anonymous, extra warnings
* make syslog ids values configurable for dispatcher and worker
* add basic command line processing, make possible to override configuration
file location

2009-07-03 dispatcher 0.9.93

* use standard bool instead of custom typedef
* use new table, add some more output useful for debugging

2009-06-29 dispatcher 0.9.92

* extend children management (kill,timeouts)
* implement config file handling
* use DESTDIR in Makefile.in

2009-06-16 dispatcher 0.9.91

* increase query limit size (maybe heap based limit would be better in future)