@@ -5,6 +5,7 @@
 * handle locks and deadlocks during query execution (sleep and retry on
 deadlock in child and retry lock in child)
 * improve handling of sql errors in main dispatcher loop
+* fix gcc printf warnings
 
 2009-07-29 dispatcher 0.9.97.2
 
